Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-898

When copy data to 2.1 cluster via 1.8 client, all 2.1 OSS servers panic.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.2.0
    • Lustre 2.1.0
    • None
    • 3
    • 622
    • 4754

      crash> bt
      PID: 4769 TASK: ffff81032a2f5860 CPU: 2 COMMAND: "ll_ost_118"
      #0 [ffff81032a3bf3e0] crash_kexec at ffffffff800af8a7
      #1 [ffff81032a3bf4a0] __die at ffffffff80065117
      #2 [ffff81032a3bf4e0] do_page_fault at ffffffff8006748d
      #3 [ffff81032a3bf5d0] error_exit at ffffffff8005dde9
      [exception RIP: obd_export_nid2str]
      RIP: ffffffff88580410 RSP: ffff81032a3bf688 RFLAGS: 00010212
      RAX: 0000000100089f24 RBX: ffff810329b30620 RCX: 0000000000000000
      RDX: 00000000ffffffff RSI: ffff810329b30620 RDI: 0000000000000000
      RBP: 0000000200089f24 R8: 0000000000000000 R9: 0000000000000000
      R10: ffff8103258ae840 R11: 0000000000000000 R12: 000000000000934b
      R13: ffff810329b306f0 R14: 0000000000000000 R15: 0000000000000004
      ORIG_RAX: ffffffffffffffff CS: 0010 SS: 0018
      #4 [ffff81032a3bf688] ost_validate_obdo at ffffffff889f2113
      #5 [ffff81032a3bf6f8] ost_rw_hpreq_lock_match at ffffffff889fc3d7
      #6 [ffff81032a3bf768] ldlm_server_blocking_ast at ffffffff886683a5
      #7 [ffff81032a3bf7c8] ost_blocking_ast at ffffffff889ff9f5
      #8 [ffff81032a3bf868] ldlm_work_bl_ast_lock at ffffffff88640257
      #9 [ffff81032a3bf908] ldlm_run_ast_work at ffffffff8863d149
      #10 [ffff81032a3bf978] ldlm_process_extent_lock at ffffffff88656d24
      #11 [ffff81032a3bfa38] ldlm_lock_enqueue at ffffffff8864281e
      #12 [ffff81032a3bfad8] ldlm_handle_enqueue0 at ffffffff88660755
      #13 [ffff81032a3bfb58] ldlm_handle_enqueue at ffffffff88660dbf
      #14 [ffff81032a3bfb88] ost_handle at ffffffff88a04c24
      #15 [ffff81032a3bfd28] ptlrpc_server_handle_request at ffffffff8868f3c7
      #16 [ffff81032a3bfe78] ptlrpc_main at ffffffff886936be
      #17 [ffff81032a3bff48] kernel_thread at ffffffff8005dfb1

            hongchao.zhang Hongchao Zhang
            aboyko Alexander Boyko
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: